// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataSourceList: Component should render card with job 1`] = `
<styled.div>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="Data Sources"
  />
  <TopHeader
    headerSubtitle="Overview"
    headerTitle="Data Sources"
    secondaryMenuItems={
      Array [
        Object {
          "label": "Project details",
          "to": "/project/1",
        },
      ]
    }
  />
  <styled.div>
    <styled.li
      key="0"
    >
      <Component
        headerComponent={
          <ForwardRef(styled.div)>
            <ForwardRef(styled.ul)>
              <ForwardRef(styled.li)>
                3 months ago
              </ForwardRef(styled.li)>
              <ForwardRef(styled.li)>
                firstName lastName
              </ForwardRef(styled.li)>
            </ForwardRef(styled.ul)>
            <ForwardRef(styled.div)>
              <Unknown />
            </ForwardRef(styled.div)>
          </ForwardRef(styled.div)>
        }
      >
        <H1
          customStyles={
            Object {
              "cursor": "pointer",
              "marginBottom": "20px",
            }
          }
          onClick={[Function]}
        >
          name
        </H1>
        <styled.div>
          <styled.div
            key="0"
          >
            <styled.span>
              Source
            </styled.span>
            <styled.span>
              <Component
                customStyles={
                  Object {
                    "height": 40,
                    "width": 40,
                  }
                }
              />
            </styled.span>
          </styled.div>
          <styled.div
            key="1"
          >
            <styled.span>
              Items
            </styled.span>
            <styled.span>
              —
            </styled.span>
          </styled.div>
          <styled.div
            key="2"
          >
            <styled.span>
              Fields
            </styled.span>
            <styled.span>
              —
            </styled.span>
          </styled.div>
          <styled.div
            key="3"
          >
            <styled.span>
              Filters
            </styled.span>
            <styled.span>
              —
            </styled.span>
          </styled.div>
          <styled.div
            key="4"
          >
            <styled.span>
              Views
            </styled.span>
            <styled.span>
              —
            </styled.span>
          </styled.div>
        </styled.div>
        <styled.div>
          <styled.div>
            <FormattedMessage
              defaultMessage="Data Process History"
              id="dataSource.list.jobTitle"
              values={Object {}}
            />
          </styled.div>
          <styled.div
            key="0"
          >
            <styled.div>
              <styled.div />
              <styled.div>
                <FormattedMessage
                  defaultMessage="Job id:"
                  id="dataSource.list.jobId"
                  values={Object {}}
                />
                 
                1
              </styled.div>
            </styled.div>
            <styled.div>
              <FormattedMessage
                defaultMessage="Updated at"
                id="dataSource.list.updatedAt"
                values={Object {}}
              />
               
              08/09/2019 10:20
            </styled.div>
          </styled.div>
          <styled.div
            key="1"
          >
            <styled.div>
              <styled.div />
              <styled.div>
                <FormattedMessage
                  defaultMessage="Job id:"
                  id="dataSource.list.jobId"
                  values={Object {}}
                />
                 
                2
              </styled.div>
            </styled.div>
            <styled.div>
              <FormattedMessage
                defaultMessage="Updated at"
                id="dataSource.list.updatedAt"
                values={Object {}}
              />
               
              07/09/2019 11:30
            </styled.div>
          </styled.div>
          <styled.div
            key="2"
          >
            <styled.div>
              <styled.div />
              <styled.div>
                <FormattedMessage
                  defaultMessage="Job id:"
                  id="dataSource.list.jobId"
                  values={Object {}}
                />
                 
                3
              </styled.div>
            </styled.div>
            <styled.div>
              <FormattedMessage
                defaultMessage="Updated at"
                id="dataSource.list.updatedAt"
                values={Object {}}
              />
               
              06/09/2019 12:40
            </styled.div>
          </styled.div>
          <styled.div
            key="3"
          >
            <styled.div>
              <styled.div />
              <styled.div>
                <FormattedMessage
                  defaultMessage="Job id:"
                  id="dataSource.list.jobId"
                  values={Object {}}
                />
                 
                4
              </styled.div>
            </styled.div>
            <styled.div>
              <FormattedMessage
                defaultMessage="Updated at"
                id="dataSource.list.updatedAt"
                values={Object {}}
              />
               
              05/09/2019 13:50
            </styled.div>
          </styled.div>
        </styled.div>
      </Component>
    </styled.li>
  </styled.div>
  <NavigationContainer
    right={false}
  >
    <BackArrowButton
      onClick={[Function]}
    />
    <PlusButton
      onClick={[Function]}
    />
  </NavigationContainer>
</styled.div>
`;

exports[`DataSourceList: Component should render correctly 1`] = `
<styled.div>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="Data Sources"
  />
  <TopHeader
    headerSubtitle="Overview"
    headerTitle="Data Sources"
    secondaryMenuItems={
      Array [
        Object {
          "label": "Project details",
          "to": "/project/1",
        },
      ]
    }
  />
  <styled.div>
    <styled.li
      key="0"
    >
      <Component
        headerComponent={
          <ForwardRef(styled.div)>
            <ForwardRef(styled.ul)>
              <ForwardRef(styled.li)>
                3 months ago
              </ForwardRef(styled.li)>
              <ForwardRef(styled.li)>
                firstName lastName
              </ForwardRef(styled.li)>
            </ForwardRef(styled.ul)>
            <ForwardRef(styled.div)>
              <Unknown />
            </ForwardRef(styled.div)>
          </ForwardRef(styled.div)>
        }
      >
        <H1
          customStyles={
            Object {
              "cursor": "pointer",
              "marginBottom": "20px",
            }
          }
          onClick={[Function]}
        >
          name
        </H1>
        <styled.div>
          <styled.div
            key="0"
          >
            <styled.span>
              Source
            </styled.span>
            <styled.span>
              <Component
                customStyles={
                  Object {
                    "height": 40,
                    "width": 40,
                  }
                }
              />
            </styled.span>
          </styled.div>
          <styled.div
            key="1"
          >
            <styled.span>
              Items
            </styled.span>
            <styled.span>
              —
            </styled.span>
          </styled.div>
          <styled.div
            key="2"
          >
            <styled.span>
              Fields
            </styled.span>
            <styled.span>
              —
            </styled.span>
          </styled.div>
          <styled.div
            key="3"
          >
            <styled.span>
              Filters
            </styled.span>
            <styled.span>
              —
            </styled.span>
          </styled.div>
          <styled.div
            key="4"
          >
            <styled.span>
              Views
            </styled.span>
            <styled.span>
              —
            </styled.span>
          </styled.div>
        </styled.div>
      </Component>
    </styled.li>
    <styled.li
      key="1"
    >
      <Component
        headerComponent={
          <ForwardRef(styled.div)>
            <ForwardRef(styled.ul)>
              <ForwardRef(styled.li)>
                3 months ago
              </ForwardRef(styled.li)>
              <ForwardRef(styled.li)>
                firstName lastName
              </ForwardRef(styled.li)>
            </ForwardRef(styled.ul)>
            <ForwardRef(styled.div)>
              <Unknown />
            </ForwardRef(styled.div)>
          </ForwardRef(styled.div)>
        }
      >
        <H1
          customStyles={
            Object {
              "cursor": "pointer",
              "marginBottom": "20px",
            }
          }
          onClick={[Function]}
        >
          name
        </H1>
        <styled.div>
          <styled.div
            key="0"
          >
            <styled.span>
              Source
            </styled.span>
            <styled.span>
              <Component
                customStyles={
                  Object {
                    "height": 40,
                    "width": 40,
                  }
                }
              />
            </styled.span>
          </styled.div>
          <styled.div
            key="1"
          >
            <styled.span>
              Items
            </styled.span>
            <styled.span>
              246
            </styled.span>
          </styled.div>
          <styled.div
            key="2"
          >
            <styled.span>
              Fields
            </styled.span>
            <styled.span>
              11
            </styled.span>
          </styled.div>
          <styled.div
            key="3"
          >
            <styled.span>
              Filters
            </styled.span>
            <styled.span>
              —
            </styled.span>
          </styled.div>
          <styled.div
            key="4"
          >
            <styled.span>
              Views
            </styled.span>
            <styled.span>
              —
            </styled.span>
          </styled.div>
        </styled.div>
      </Component>
    </styled.li>
  </styled.div>
  <NavigationContainer
    right={false}
  >
    <BackArrowButton
      onClick={[Function]}
    />
    <PlusButton
      onClick={[Function]}
    />
  </NavigationContainer>
</styled.div>
`;

exports[`DataSourceList: Component should render empty 1`] = `
<styled.div>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="Data Sources"
  />
  <TopHeader
    headerSubtitle="Overview"
    headerTitle="Data Sources"
    secondaryMenuItems={
      Array [
        Object {
          "label": "Project details",
          "to": "/project/1",
        },
      ]
    }
  />
  <styled.div />
  <NavigationContainer
    right={false}
  >
    <BackArrowButton
      onClick={[Function]}
    />
    <PlusButton
      onClick={[Function]}
    />
  </NavigationContainer>
</styled.div>
`;
